--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="middle"><a href="chanel no.5.html">Chanel No.5</a></div>
     <div class="bottom"><a href="chanel chance.html">Chanel Chance</a></div>
     <hr>
-    <video controls width="300" height="400">
+    <video atuoplay muted playsinline width="300" height="400">
         <source src="imges/video.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
