--- a/coco.html
+++ b/coco.html
@@ -39,7 +39,7 @@
     
         <!-- <video> -->
         <div style="border: 1px solid rgb(179, 197, 128); padding: 10px; margin: 20px; width: 500px;">
-          <video controls width="100%" height="300px">
+          <video atuoplay muted playsinline width="100%" height="300px">
             <source src="imges/video 1.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
